# debrief

./: BRIEF.md  GEMINI.md  README.md  TODO.md  pyproject.toml
debrief/: __init__.py  analysis.py  constants.py  ignore.py  linting.py  main.py  resolve.py  tree.py
tests/: __init__.py  test_lint.py
